# UCI-EarlyReadmission

./: .gitignore  README.md  pyproject.toml  todo.md
src/: evaluate.py  models.py  preprocess.py  splitting.py  train.py
